--- a/package.json
+++ b/package.json
@@ -2,5 +2,15 @@
   "name": "DUArcade2016",
   "version": "0.0.1",
   "dependencies": {
+    "express": "^4.13.4",
+    "phaser": "^2.4.6"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-ts": "^5.3.2"
   }
 }
