got a working game app

--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "DUArcade2016",
   "version": "0.0.1",
   "dependencies": {
-    "express": "^4.13.4",
-    "phaser": "^2.4.6"
+    "express": "^4.13.4"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
