--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-less": "^1.2.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-ts": "^5.3.2"
   }
