--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
   },
   "private": true,
   "dependencies": {
+    "body-parser": "1.15.0",
     "express": "^4.13.4",
-    "body-parser": "1.15.0"
+    "recursive-readdir": "2.0.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
