--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
   },
   "private": true,
   "dependencies": {
-    "body-parser": "1.15.0",
+    "body-parser": "^1.15.0",
+    "consolidate": "^0.14.0",
     "express": "^4.13.4",
-    "recursive-readdir": "2.0.0"
+    "mustache": "^2.2.1",
+    "recursive-readdir": "^2.0.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
