--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "grunt-contrib-less": "^1.2.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-focus": "^0.1.1",
-    "grunt-ts": "^5.3.2"
+    "grunt-ts": "^5.4.0",
+    "typescript": "^1.8.10"
   }
 }
